# ethusd_multiple_regression_model

./: .env.example  .gitignore  Dockerfile  README.md  data.csv  docker-compose.yaml  main.py  pyproject.toml
src/: config.py  utils.py
src/api/: api_abc.py  base_api.py
src/app_celery/: celery.py  celeryconfig.py  tasks.py
src/database/: database.py  manager.py  models.py
tests/: heed.py
tests/api/: test_api_alphavantage.py
